<resources>
    <string name="app_name">SkyTonight</string>
    <string name="blank_fragment_news">This is a placeholder for the News fragment</string>
    <string name="blank_fragment_calendar">This is a placeholder for the Calendar fragment</string>
    <string name="astro_object_alt">Altitude: %1$.1f°</string>
    <string name="astro_object_az">Azimuth: </string>
    <string name="astro_event_peak">Peak: %1$s</string>
    <string name="astro_event_vis">Visibility:  %1$s</string>
    <string name="dir_n">Direction: North</string>
    <string name="dir_nw">Direction: North-West</string>
    <string name="dir_ne">Direction: North-East</string>
    <string name="dir_w">Direction: West</string>
    <string name="dir_s">Direction: South</string>
    <string name="dir_sw">Direction: South-West</string>
    <string name="dir_se">Direction: South-East</string>
    <string name="dir_e">Direction: East</string>
    <string name="ecl_sol_0">Eclipse invisible</string>
    <string name="ecl_sol_1">Partial Solar Eclipse</string>
    <string name="ecl_sol_2">Annular Solar Eclipse</string>
    <string name="ecl_sol_3">Total Solar Eclipse</string>
    <string name="ecl_sol_4">Hybrid Solar Eclipse</string>
    <string name="ecl_sol_5">Solar Eclipse - Visibility Unknown</string>
    <string name="ecl_lun_0">Eclipse invisible</string>
    <string name="ecl_lun_1">Penumbral Lunar Eclipse</string>
    <string name="ecl_lun_2">Partial Lunar Eclipse</string>
    <string name="ecl_lun_3">Total Lunar Eclipse</string>
    <string name="ecl_lun_5">Lunar Eclipse - Visibility Unknown</string>
    <string name="no_events_text">No events this month</string>
    <string name="month_0">January %1$d</string>
    <string name="month_1">February %1$d</string>
    <string name="month_2">March %1$d</string>
    <string name="month_3">April %1$d</string>
    <string name="month_4">May %1$d</string>
    <string name="month_5">June %1$d</string>
    <string name="month_6">July %1$d</string>
    <string name="month_7">August %1$d</string>
    <string name="month_8">September %1$d</string>
    <string name="month_9">October %1$d</string>
    <string name="month_10">November %1$d</string>
    <string name="month_11">December %1$d</string>
    <string name="month_unknown">Unknown</string>
    <string name="ms_quadrantids">Quadrantids</string>
    <string name="ms_lyrids">Lyrids</string>
    <string name="ms_eta_aquariids">Eta Aquariids</string>
    <string name="ms_alpha_capricornids">Alpha Capricornids</string>
    <string name="ms_southern_delta_aquariids">Southern Delta Aquariids</string>
    <string name="ms_perseids">Perseids</string>
    <string name="ms_orionids">Orionids</string>
    <string name="ms_southern_taurids">Southern Taurids</string>
    <string name="ms_northern_taurids">Northern Taurids</string>
    <string name="ms_leonids">Leonids</string>
    <string name="ms_geminids">Geminids</string>
    <string name="ms_ursids">Urids</string>
    <string name="event_unknown">Unknown Event</string>
    <string name="core_option_today">Today</string>
    <string name="core_option_calendar">Journal</string>
    <string name="core_option_news">News</string>
    <string name="core_option_events">Events</string>
    <string name="topbar_menu_settings">Settings</string>
    <string name="topbar_menu_info">Acknowledgements</string>
    <string name="core_no_location_toast">Location not enabled - displaying the sky over the Easter Island.</string>
    <string name="core_yes_location_toast">Your location was successfully updated.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="astr_obj_301">Moon</string>
    <string name="astr_obj_199">Mercury</string>
    <string name="astr_obj_299">Venus</string>
    <string name="astr_obj_499">Mars</string>
    <string name="astr_obj_599">Jupiter</string>
    <string name="astr_obj_699">Saturn</string>
    <string name="astr_obj_799">Uranus</string>
    <string name="astr_obj_899">Neptune</string>
    <string name="astr_obj_1000">International Space Station</string>
    <string name="iss_risetime">Next appearance: %1$s</string>
    <string name="iss_risetime_today">Next appearance: %1$s (today)</string>
    <string name="iss_risetime_tomorrow">Next appearance: %1$s (tomorrow)</string>
    <string name="iss_duration">Duration: %1$d minutes %2$d seconds</string>
    <string name="cal_button_notes">Notes</string>
    <string name="cal_button_photos">Photos</string>
    <string name="title_activity_photo_gallery">Photos</string>
    <string name="title_activity_note">Note</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_audio">Voice notes</string>
    <string name="title_activity_video">Videos</string>
    <string name="photo_saved">Your photo has been saved</string>
    <string name="video_saved">Your video has been saved</string>
    <string name="title_activity_photo_gallery2">Photos</string>
    <string name="day_info_text">%1$d word%2$s, %3$d photo%4$s, %5$d others</string>
    <string name="week_info_text">%1$s - %2$s</string>
    <string name="weather_cloud_coverage_unknown">Cloud coverage: ?</string>
    <string name="weather_cloud_coverage">Cloud coverage: %1$d%%</string>
    <string name="weather_condition_200">Thunderstorm with light rain</string>
    <string name="weather_condition_201">Thunderstorm with rain</string>
    <string name="weather_condition_202">Thunderstorm with heavy rain</string>
    <string name="weather_condition_210">Light thunderstorm</string>
    <string name="weather_condition_211">Thunderstorm</string>
    <string name="weather_condition_212">Heavy thunderstorm</string>
    <string name="weather_condition_221">Ragged thunderstorm</string>
    <string name="weather_condition_230">Thunderstorm with light drizzle</string>
    <string name="weather_condition_231">Thunderstorm with drizzle</string>
    <string name="weather_condition_232">Thunderstorm with heavy drizzle</string>
    <string name="weather_condition_300">Light intensity drizzle</string>
    <string name="weather_condition_301">Drizzle</string>
    <string name="weather_condition_302">Heavy intensity drizzle</string>
    <string name="weather_condition_310">Light intensity drizzle rain</string>
    <string name="weather_condition_311">Drizzle rain</string>
    <string name="weather_condition_312">Heavy intensity drizzle rain</string>
    <string name="weather_condition_313">Shower rain and drizzle</string>
    <string name="weather_condition_314">Heavy shower rain and drizzle</string>
    <string name="weather_condition_321">Shower drizzle</string>
    <string name="weather_condition_500">Light rain</string>
    <string name="weather_condition_501">Moderate rain</string>
    <string name="weather_condition_502">Heavy intensity rain</string>
    <string name="weather_condition_503">Very heavy rain</string>
    <string name="weather_condition_504">Extreme rain</string>
    <string name="weather_condition_511">Freezing rain</string>
    <string name="weather_condition_520">Light intensity rain</string>
    <string name="weather_condition_521">Shower rain</string>
    <string name="weather_condition_522">Heavy intensity rain</string>
    <string name="weather_condition_531">Ragged shower rain</string>
    <string name="weather_condition_600">Light snow</string>
    <string name="weather_condition_601">Snow</string>
    <string name="weather_condition_602">Heavy snow</string>
    <string name="weather_condition_611">Sleet</string>
    <string name="weather_condition_612">Shower sleet</string>
    <string name="weather_condition_615">Light rain and snow</string>
    <string name="weather_condition_616">Rain and snow</string>
    <string name="weather_condition_620">Light shower snow</string>
    <string name="weather_condition_621">Shower snow</string>
    <string name="weather_condition_622">Heavy shower snow</string>
    <string name="weather_condition_701">Mist</string>
    <string name="weather_condition_711">Smoke</string>
    <string name="weather_condition_721">Haze</string>
    <string name="weather_condition_731">Sand</string>
    <string name="weather_condition_741">Fog</string>
    <string name="weather_condition_751">Sand</string>
    <string name="weather_condition_761">Dust</string>
    <string name="weather_condition_762">Volcanic ash</string>
    <string name="weather_condition_771">Squalls</string>
    <string name="weather_condition_781">Tornado</string>
    <string name="weather_condition_800">Clear sky</string>
    <string name="weather_condition_801">Few clouds</string>
    <string name="weather_condition_802">Scattered clouds</string>
    <string name="weather_condition_803">Broken clouds</string>
    <string name="weather_condition_804">Overcast clouds</string>
    <string name="weather_condition_unknown">Unknown weather</string>
    <string name="voice_permission_yes">Recording enabled</string>
    <string name="voice_permission_no">Permission denied</string>
    <string name="exit_dialog_prompt">Do you want to return to the Calendar screen and discard changes?</string>
    <string name="exit_dialog_title">Unsaved changes</string>
    <string name="exit_dialog_yes">OK</string>
    <string name="exit_dialog_no">Cancel</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_en">English</string>
    <string name="settings_language_pl">Polski</string>
    <string name="language_changed_en">Language changed</string>
    <string name="language_changed_pl">Język został zmieniony</string>
    <string name="notif_changed">Notification settings changed</string>
    <string name="settings_location">Location</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_switch_events">Event Notifications</string>
    <string name="settings_switch_iss">ISS Notifications</string>
    <string name="time_now">Now</string>
    <string name="time_now_one">1 hour from now</string>
    <string name="time_from_now">%1$s hours from now (%2$s)</string>
    <string name="tab_day">Day</string>
    <string name="tab_week">Week</string>
    <string name="tab_month">Month</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="title_activity_article">News</string>
    <string name="title_activity_setting">Settings</string>
    <string name="notif_title_event">Astronomical event approaching.</string>
    <string name="notif_msg_event_meteor">A %1$s is about to peak on %3$s.</string>
    <string name="notif_msg_event_lunar">A %1$s is about to start on %2$s and peak on %3$s.</string>
    <string name="notif_msg_event_solar">A %1$s is about to peak at %2$s.</string>
    <string name="notif_title_iss">ISS flyby approaching.</string>
    <string name="notif_msg_iss">ISS will fly overhead at %1$s.</string>
    <string name="zhr">%1$d meteors per hour</string>
    <string name="low_visibility">Low visibility for your location</string>
    <string name="app_info">SkyTonight 1.0 2018</string>
    <string name="app_author">Created by Barbara Stecka, Wrocław University of Science and Technology</string>
    <string name="app_acknowledgements_note">The author would like to extend thanks to people and organizations who have provided the astronomical data used by this application.</string>
    <string name="app_acknowledgements">Acknowledgements:</string>
    <string name="app_eclipse">Eclipse Predictions by Fred Espenak, www.eclipsewise.com.</string>
    <string name="app_meteor">Meteor Shower data by International Meteor Organization, www.imo.net.</string>
    <string name="app_images">Space photos provided by NASA, www.nasa.gov. Used in accordance with Media Usage Guidelines, for educational/informational purposes.</string>
    <string name="app_news">Astronomy news link to www.space.com, www.astronomy.com, www.space24.pl and www.astronet.pl.</string>
</resources>