<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottombaritem_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/core_option_calendar"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottombaritem_today"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/core_option_today"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottombaritem_events"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/core_option_events"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottombaritem_news"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/core_option_news"
        app:showAsAction="withText" />

</menu>