<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"
        android:theme="@style/Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <LinearLayout
            android:id="@+id/scrollViewContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_language"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_language_en" />

            <Switch
                android:id="@+id/switchPl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_language_pl" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/settings_notifications"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Switch
                android:id="@+id/switchEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_switch_events" />

            <Switch
                android:id="@+id/switchISS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_switch_iss" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>